minor scrollbar bug fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@ a {
 }
 
 html,body {
-  overflow-x: hidden;
+  overflow: visible;
   scroll-behavior: smooth;
 }
 
